fixed footer alignment

--- a/index.css
+++ b/index.css
@@ -108,6 +108,10 @@ footer {
     margin-top: auto; /* Push the footer to the bottom */
     text-align: center;
     background-color: #f1f1f1;
-    padding: 10px;
+    padding: 20px 30px;;
     color: #555;
+    width: calc(100% - 0px); 
+    position: relative;
 }
+
+
