--- a/pages/record.css
+++ b/pages/record.css
@@ -91,7 +91,7 @@ button:hover {
 
 .popup {
     display: none;  /* Hidden by default */
-    position: fixed;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
